--- a/RestMySQL/src/main/resources/application.properties
+++ b/RestMySQL/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 
 # if port 8080 is in use, can change our port number using the line below
-server.port=8090
+#server.port=8070
 # Mac/Linux info for MySQL login
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_db?serverTimezone=EST5EDT
-spring.datasource.username=root
-spring.datasource.password=haleykobe2
-spring.jpa.show-sql=true
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring_db?serverTimezone=EST5EDT
+#spring.datasource.username=root
+#spring.datasource.password=haleykobe2
+#spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
 
@@ -15,3 +15,9 @@ spring.jpa.properties.hibernate.format_sql=true
 #spring.datasource.url=jdbc:mysql://localhost:3306/spring_db
 #spring.datasource.username=root
 #spring.datasource.password=root
+
+#AWS
+server.port = 5000
+spring.datasource.url=jdbc:mysql://haleys-db.cn8sz1ztwbwx.us-west-1.rds.amazonaws.com:3306/students?serverTimezone=EST5EDT
+spring.datasource.username=root
+spring.datasource.password=root1234
